hexapod/hexapod_ros/log/build_2025-11-03_16-25-21/hexapod_ros/stderr.log
  File "/home/spider/GWEN_V2/SpiderGwen/hexapod/hexapod_ros/install/hexapod_ros/lib/python3.10/site-packages/hexapod_ros/spider.py", line 63
    if self.bias_added = False:
       ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

